--- a/newproject/index.html
+++ b/newproject/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Test</h1>
+        <h2>Test2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum enim cumque modi cum architecto culpa officiis corrupti tempora, soluta nihil voluptatibus quas? Et asperiores nam aspernatur inventore dolorem, exercitationem quaerat.</p>
     </header>
 </body>
 </html>
